--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Empilhadores2011"
 APP_ENV=local
 APP_KEY=base64:42+GhrgcWrX/WBht8/RXQu9dNSyXFrMe88YNo8XmCzM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://empilhadores2011.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=empilhadores_2011
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u741869865_empilhadores
+DB_USERNAME=u741869865_empilhadores
+DB_PASSWORD=H;0G!KIl
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,7 +28,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_MAILER=mail
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=2a8e79eb8d8e11
